--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -20,4 +20,5 @@ body {
 
 .container {
   @include flex-row;
+  overflow: hidden;
 }
